About done with this

--- a/index.html
+++ b/index.html
@@ -28,21 +28,28 @@
             <div class="input-container">
                 <input type="search" />
             </div>
-            <button>Google Search</button>
-            <button>I'm Feeling Lucky!</button>
-            <p>Google offered in: <a href="#">Francais</a></p>
+            <div class="button-container">
+                <button>Google Search</button>
+                <button>I'm Feeling Lucky!</button>
+                <p>Google offered in: <a href="#">Francais</a></p>
+            </div>
+
         </div>
     </main>
     <div class="footer-one">
         <p>Canada</p>
     </div>
     <footer>
-        <a href="#">Advertising</a>
-        <a href="#">Business</a>
-        <a href="#">How Search works</a>
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
-        <a href="#">Settings</a>
+        <div class="FG1">
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search works</a>
+        </div>
+        <div class="FG2">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
+        </div>
     </footer>
 </body>
 
